app/bridge.css
/*
This file is bundled with the application
as well as separately for widgets to include
*/

@import "./fonts.css";

html, body, #root {
  position: relative;
  margin: 0;
  padding: 0;

  font-family: var(--base-fontFamily--primary);
  color: var(--base-color);
}

* {
  outline: none;

  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;

  font-feature-settings: "tnum";
}

*.u-selectable {
  -webkit-user-select: all;
  -moz-user-select: all;
  -ms-user-select: all;
  user-select: all;
}

/*
Style the scrollbars on all non-macOS platforms
and macOS when a mouse is connected
*/
html:not([data-platform="darwin"]) *:not(.u-scrollbarStyle--none)::-webkit-scrollbar,
html[data-has-mouse="true"] *:not(.u-scrollbarStyle--none)::-webkit-scrollbar {
  width: 10px;
}

html:not([data-platform="darwin"]) *:not(.u-scrollbarStyle--none)::-webkit-scrollbar-track,
html[data-has-mouse="true"] *:not(.u-scrollbarStyle--none)::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 0 transparent;
  border-left: none;
}

html:not([data-platform="darwin"]) *:not(.u-scrollbarStyle--none)::-webkit-scrollbar-thumb,
html[data-has-mouse="true"] *:not(.u-scrollbarStyle--none)::-webkit-scrollbar-thumb {
  background-color: var(--base-color--shade3);
  outline: none;
}

html:not([data-platform="darwin"]) *:not(.u-scrollbarStyle--none):hover::-webkit-scrollbar-thumb,
html[data-has-mouse="true"] *:not(.u-scrollbarStyle--none):hover::-webkit-scrollbar-thumb {
  background-color: var(--base-color--shade1);
}

a, .Link {
  padding: 0;

  color: inherit;
  font-size: 1em;
  text-decoration: underline;

  border: none;
  background: none;

  cursor: pointer;
}

/* Buttons */

button {
  padding: 0;
}

.Button,
.Button--accent,
.Button--primary,
.Button--secondary,
.Button--ghost {
  padding: 0.9em 1.5em;

  font-size: 1em;
  font-family: var(--base-fontFamily--primary);
  text-decoration: none;

  border: none;
  border-radius: 12px;

  box-shadow: inset 0 0 0 1px var(--base-color--shade1), 0 2px 5px rgba(0, 0, 0, 0.07);

  color: var(--base-color);
  background: inherit;

  cursor: default;
  white-space: nowrap;

  transition: box-shadow 0.2s;
}

.Button:active,
.Button--accent:active,
.Button--primary:active,
.Button--secondary:active,
.Button--ghost:active{
  opacity: 0.8;
  box-shadow: inset 0 0 0 1px var(--base-color--shade1), 0 2px 4px transparent;
}

.Button--accent {
  color: var(--base-color--accent2);
  background: var(--base-color--accent1);
}

.Button--ghost {
  color: var(--base-color);
}

.Button--small {
  display: inline-flex;
  padding: 0.5em 0.75em;

  align-items: center;
  justify-content: center;
}

.Button:disabled {
  opacity: 0.6;
}

/* Headings */

h1, .u-heading--1 {
  margin: 0.4em 0;
  font-size: 1.6em;
}

h2, .u-heading--2 {
  margin: 0.4em 0;
  font-size: 1.2em;
  font-weight: 500;
}

h3, .u-heading--3 {
  margin: 0.5em 0;
  font-size: 1em;
  font-weight: 500;
}

h4, .u-heading--4 {
  font-size: 1em;
  margin: 0.2em 0;
}

/* Inputs */

textarea,
input {
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
}

.Input,
input[type="tel"],
input[type="date"],
input[type="text"],
input[type="email"],
input[type="number"],
input[type="search"],
input[type="password"],
textarea {
  padding: 0.65em 0.6em;

  font-size: 1em;
  font-family: var(--base-fontFamily--primary);

  border: none;
  border-radius: 8px;

  color: var(--base-color);
  background: var(--base-color--shade3);
  box-shadow: inset 0 0 0 1px var(--base-color--shade3);

  box-sizing: border-box;
}

.Input,
input[type="tel"]:focus,
input[type="date"]:focus,
input[type="text"]:focus,
input[type="email"]:focus,
input[type="number"]:focus,
input[type="search"]:focus,
input[type="password"]:focus,
textarea:focus {
  box-shadow: inset 0 0 0 1px var(--base-color--shade1);
}

.Input,
input[type="tel"]:hover,
input[type="date"]:hover,
input[type="text"]:hover,
input[type="email"]:hover,
input[type="number"]:hover,
input[type="search"]:hover,
input[type="password"]:hover,
textarea:hover {
  box-shadow: inset 0 0 0 1px var(--base-color--shade1);
}

input[type="search"] {
  font-family: 'Bridge Glyphs', var(--base-fontFamily--primary);
}

input[type="checkbox"] {
  display: inline-block;
  position: relative;
  padding: 3px 0;

  width: 40px;
  height: 22px;

  border-radius: 50px;

  box-shadow: inset 0 0 0 1px var(--base-color--shade1);

  vertical-align: middle;

  -webkit-appearance: none;
  appearance: none;

  overflow: hidden;
}

input[type="checkbox"]::before {
  content: "";
  position: absolute;
  top: 50%;
  left: 0;

  width: 17px;
  height: 17px;

  background: var(--base-color);

  border-radius: 50px;
  vertical-align: middle;

  transform: translate(3px, -50%);
  transition: 0.2s;

  opacity: 0.7;
  z-index: 1;
}

input[type="checkbox"]:checked::after {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;

  background: var(--base-color--accent1);
  opacity: 0;

  transition: 0.2s;
}

input[type="checkbox"]:focus {
  box-shadow: inset 0 0 0 1px var(--base-color--shade1), 0 0 0 1px var(--base-color--shade1);
}

input[type="checkbox"]:checked::after {
  opacity: 0.2;
}

input[type="checkbox"]:checked::before {
  background: var(--base-color--accent1);
  transform: translate(20px, -50%);
  opacity: 1;
}

select {
  padding: 0.8em 2.5em 0.8em 1em;

  color: inherit;
  font-size: 1em;
  font-family: var(--base-fontFamily--primary);

  border: 1px solid var(--base-color--shade1);
  border-radius: 8px;
  
  background: url('./assets/icons/arrow-down.svg') no-repeat right 10px center var(--base-color--shade3);

  -webkit-appearance: none;
  appearance: none;

  box-sizing: border-box;

  overflow: hidden; 
  white-space: nowrap;
  text-overflow: ellipsis;
}

.u-theme--light select {
  background: url('./assets/icons/arrow-down-dark.svg') no-repeat right 10px center var(--base-color--shade3);
}

.Select--small {
  padding: 0.4em 2.2em 0.4em 0.75em;
}

select:focus {
  background: url('./assets/icons/arrow-down.svg') no-repeat right 10px center var(--base-color--background1);
}

.u-theme--light select:focus {
  background: url('./assets/icons/arrow-down-dark.svg') no-repeat right 10px center var(--base-color--background1);
}

/* Labels */

.u-text--label {
  display: inline-block;
  margin: 0.1em 0;
  font-size: 0.8em;
  text-transform: uppercase;

  opacity: 0.7;
}

/* Hints */

[data-hint] {
  position: relative;
}

[data-hint]:hover::before {
  content: attr(data-hint);
  position: absolute;
  top: 0;
  left: 0;

  padding: 5px 9px;

  color: black;
  background: white;
  border-radius: 6px;

  white-space: nowrap;

  transform: translate(0, 5px);
  z-index: 10;
}

[data-hint-alignment="right"]:hover::before {
  transform: translate(-100%, 5px);
}

/* Loader */

.Loader {
  display: flex;
  width: 100%;
  height: 100%;

  align-items: center;
  justify-content: center;
}

.Loader::after {
  content: '';
  position: relative;

  width: 50px;
  height: 50px;

  background-color: var(--base-color);

  -webkit-mask-position: center;
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-image: url('./assets/icons/spinner.svg');
  -webkit-mask-size: 90%;

  mask-position: center;
  mask-repeat: no-repeat;
  mask-image: url('./assets/icons/spinner.svg');
  mask-size: 90%;
}

/* Warning */

.Warning {
  display: flex;
  width: 100%;
  height: 100%;

  align-items: center;
  justify-content: center;
}

.Warning::after {
  content: '';
  position: relative;

  width: 50px;
  height: 50px;

  background-color: var(--base-color);

  -webkit-mask-position: center;
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-image: url('./assets/icons/warning.svg');
  -webkit-mask-size: 90%;

  mask-position: center;
  mask-repeat: no-repeat;
  mask-image: url('./assets/icons/warning.svg');
  mask-size: 90%;
}

